2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_item_activate): ensure wireless security is found; use the
			type-specific connection name rather than just "Auto"

2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (add_ciphers_from_flags, get_security_for_ap, nma_menu_item_activate):
			autogenerate acceptable security parameters from AP information when
			a wireless network is clicked and no compatible connection has been
			defined yet

2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/password-dialog.c
	  src/password-dialog.h
	  src/applet-dbus-settings.c
	  src/applet.glade
	  src/Makefile.am
		- Add a simple WEP/WPA-PSK password dialog for now
		- Remove cruft from applet glade file

2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_get_secrets): make asynchronous to
			match libnm-glib API change

2007-09-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
	  src/applet-dbus-settings.h
		- (connection_settings_changed_cb, applet_dbus_connection_settings_new):
			ensure 'id' is updated
		- (applet_dbus_connection_settings_get_connection): new function

	* src/applet.c
		- (nm_utils_same_ssid, match_cipher, security_compatible,
		   nm_ap_check_compatible): gross C&P from NM to find compatible connection
		- (nma_menu_item_activate): find an existing connection to activate
			if we can
		- (nma_add_networks_helper, get_vpn_connections): warning fixes

2007-09-20  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/nm-connection-editor.c: Use defined setting names.

	* src/connection-editor/nm-connection-list.c (nm_connection_list_finalize):
	Don't leak GConfClient.
	(load_connections): No need to use weak references, just use 
	(g_object_set_data_full).

	* src/gconf-helpers/gconf-helpers.c (property_value_destroy): Implement.
	(add_property): Implement.
	(read_one_setting_value_from_gconf): Use variable names that actually exist.